# Dashboard

./: Procfile  README.md  appmain.py  requirements.txt  setup.cfg
assets/: material-dashboard.min.css  nucleo-icons.css  nucleo-svg.css
assets/js/: chartjs.min.js  myjava.js
data/: ExpiredUser.csv  WillExpireUser.csv  allexpiringUser.csv  employee_data_50.csv  retrieveQSSdata.py
