[metadata]
name = QssDash
description = DashBoard for IT Department
author = Esteban Barrios    
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.11 
    Programming Language :: Python :: 3 :: Only
[options]
packages =
    ArusdUserCreationHub
install_requires =
python_requires = >=3.11
package_dir =

zip_safe = no